# lattecotta-dock

./: .clangd  CLAUDE.md  CMakeLists.txt  README.md  flake.nix  package.nix
app/: dbusreports.h  (+12 more)
containment/: CMakeLists.txt
containment/plugin/: autosizestepper.cpp  autosizestepper.h  backgroundstateresolver.cpp  backgroundstateresolver.h  colorizerdecider.h  filldistributortools.h  lattecontainmentplugin.cpp  layoutmanager.cpp  maskgeometrybridge.h  placementnormalizer.cpp  placementnormalizer.h
containment/plugin/units/: README.md  autosizeengine.h  backgroundstate.h  colorizerdecision.h  filldistributor.h  justifysplitters.h  maskgeometry.h
declarativeimports/core/: CMakeLists.txt  badgemathtools.cpp  badgemathtools.h  dialog.cpp  dialog.h  dropclassifiertools.h  environment.cpp  iconitem.cpp  iconitem.h  lattecoreplugin.cpp  parabolicmathtools.cpp  parabolicmathtools.h  parabolicroutertools.cpp  parabolicroutertools.h  plugins.qmltypes  quickwindowsystem.cpp  tools.cpp  tools.h  visibleindextools.cpp  visibleindextools.h  wheelstepper.h  windowcyclertools.h  windowresizehandler.cpp  windowresizehandler.h
declarativeimports/core/units/: README.md  badgemath.h  colortools.h  dropclassifier.h  iconsourceclassifier.h  parabolicmath.h  parabolicrouter.h  rowentry.h  visibleindex.h  wheelaccumulator.h  windowcycler.h
plasmoid/: CMakeLists.txt
plasmoid/plugin/: backend.cpp  backend.h  lattetasksplugin.cpp  launcherlistbridge.cpp  launcherlistbridge.h  middleclickdispatch.h  plugins.qmltypes  previewswitchbridge.cpp  previewswitchbridge.h  qmldir  smartlauncherbackend.cpp  smartlauncheritem.cpp  smartlauncheritem.h  tooltiptextcomposer.cpp  tooltiptextcomposer.h
tests/: CMakeLists.txt  abstractlayouttest.cpp  activitiesinfotest.cpp  appearancehandleraudittest.cpp  behaviorwiringaudittest.cpp  commontoolstest.cpp  configcontrolstest.cpp  coretoolstest.cpp  datatypestest.cpp  dockidentitycontracttest.cpp  effectshandleraudittest.cpp  generictoolstest.cpp  importerlogictest.cpp  importerregressiontest.cpp  indicatorfactoryremovaltest.cpp  installed-package-gate-runtime-test.sh  installed-package-gate-selftest.sh  lastactivewindowtest.cpp  layershellmappingtest.cpp  layoutmanagerparkingtest.cpp  layoutmanagertest.cpp  lengthhandleraudittest.cpp  panelbackgroundtest.cpp  qmllint-baseline  ratchet-baseline  schemesmodeltest.cpp  screenpooltest.cpp  settingscontrolregistrytest.cpp  settingscontrolsourceguardtest.cpp  settingsinventorytest.cpp  settingsmodelstest.cpp  settingswiringharnesstest.cpp  shortcutstest.cpp  smartlauncheritemtest.cpp  sourceguardtest.cpp  storageidremapapplicationtest.cpp  storagetest.cpp  syncedlaunchersclienttest.cpp  tasksbackendtest.cpp  taskshandleraudittest.cpp  (+10 more)
tests/contracts/: README.md  alternativescreateapplettest.cpp  appletwindowparentingtest.cpp  askdestroysignalorderingtest.cpp  contextmenudefaulttest.cpp  destroyedtypedemotiontest.cpp  editmodehandleactiontest.cpp  indicatormetadatatest.cpp  indicatorsknsrctest.cpp  layoutmenuitemwidgettest.cpp  popupplacementcontracttest.cpp  representationswitchtest.cpp  tst_bindingrestorecontracts.qml  tst_loadergatecontracts.qml  tst_qt6typecontracts.qml  tst_transientwindowcontracts.qml
tests/coverage/: README.md  coverage-ratchet.sh  qmllint-baseline  qmllint-gate.sh  ratchet-baseline
tests/data/: per-view-settings-inventory.json
tests/e2e/: 020-wheel-task-cycle.sh  021-launcher-wheel.sh  022-configoverlay-wheel-threshold.sh  022-empty-area-window-actions.sh  031-ruler-slider-crossview.sh  032-behavior-live-reflect.sh  032-effects-config-readback.sh  032-wheel-editbackground-opacity.sh  033-chrome-advanced-readback.sh  034-tasks-config-apply.sh  040-preview-tooltip-text.sh  060-geometry-agreement.sh  061-partial-reservation-placement.sh  070-asan-binary-shadow.sh  071-maximized-window-length.sh  080-add-applet.sh  080-key-escape-cancels-move.sh  090-golden-bridge-selftest.sh  090-remove-applet.sh  091-drop-marker.sh  092-task-reorder.sh  093-widget-explorer-dnd.sh  100-applet-reorder.sh  110-colorizer-applet-contrast.sh  audit-harness-selftest.sh  create-linked-dock.sh  dock-edit-retarget-cancel.sh  lib.sh  linked-dock-operation-stress.sh  linked-dock-removal-undo.sh  matrix-harness-selftest.sh  multi-output-selftest.sh  parabolic-hover-preview.sh  presentation-coverage-selftest.sh
tests/helpers/: fakenotificationservice.cpp
tests/parkingharness/: Harness.qml  appletmain.qml
tests/qml/: tst_autosize.qml  tst_backgroundstate.qml  tst_badgetext.qml  tst_buttonhintclickthrough.qml  tst_comboboxpopup.qml  tst_compactapplet.qml  tst_filldistribution.qml  tst_launcherlistops.qml  tst_normalstateautosize.qml  tst_plasmaindicatorgroupsvg.qml  tst_scrollablelist.qml  tst_shadoweditem.qml  tst_sliderwheel.qml  tst_taskaccessible.qml  tst_taskactions.qml  tst_tooltiptext.qml
tests/sceneprobe/: CMakeLists.txt  imagecompare.cpp  imagecompare.h  imagecompare_test.cpp  imgdiff_main.cpp  main.cpp  run_in_kwin.sh  vk-suppressions.txt
tests/settingscontrolregistryfixture/: Fixture.qml  settingscontrolregistryfixture.qrc
tests/units/: CMakeLists.txt  README.md  activitysetalgebratest.cpp  app-subtree-units.list  autosizeenginetest.cpp  backgroundstatetest.cpp  badgemathtest.cpp  colorizerdecisiontest.cpp  colortoolstest.cpp  configsnapshotdiff.h  dbusreportstest.cpp  dropclassifiertest.cpp  extraviewhintstest.cpp  filldistributortest.cpp  iconsourceclassifiertest.cpp  ignoredwindowregistrytest.cpp  justifysplitterstest.cpp  launcherlistopstest.cpp  lengthoffsetclamptest.cpp  maskgeometrytest.cpp  panelbackgroundscantest.cpp  parabolicmathtest.cpp  parabolicroutertest.cpp  placementstatetest.cpp  positionergeometrytest.cpp  previewswitchenginetest.cpp  rowentrytest.cpp  screengeometrycalculatortest.cpp  scrollmathtest.cpp  settingscontrolrecordstest.cpp  settingssourcescanner.h  settingssourcescannertest.cpp  storageidremappertest.cpp  tooltiptexttest.cpp  viewactionpolicytest.cpp  visibleindextest.cpp  wheelaccumulatortest.cpp  windowcyclertest.cpp  windowidtest.cpp  windowtrackingpredicatestest.cpp
(+485 files in other folders)
